Avoid counter overlapping with question text

--- a/static/lf4.css
+++ b/static/lf4.css
@@ -766,6 +766,10 @@ div.form .member_photo .member_image.member_image_photo {
   z-index: 1;
 }
 
+.survey h2 {
+  display: block;
+}
+
 .survey_counter {
   float: right;
   margin-left: 1em;
